--- a/styles/objects/hero.less
+++ b/styles/objects/hero.less
@@ -10,7 +10,7 @@
 	margin: 0px;
 	padding: 0px;
 	border: 0px;
-	height: 350px;
+	height: @heroSize;
 	overflow: hidden;
 	background-image: @heroBackground;
 	background-position: center;
