--- a/styles/tempfix.less
+++ b/styles/tempfix.less
@@ -117,3 +117,7 @@ article {
 .pkp_page_index .additional_content {
 	border: none;
 }
+
+.cmp_announcements li {
+	border: none !important;
+}
