--- a/styles/typography.less
+++ b/styles/typography.less
@@ -5,3 +5,74 @@
 		font-size: 30px;
 	}
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a,
+span,
+.date {
+	margin: 0 !important;
+	padding: 0 !important;
+}
+
+h1,
+h2,
+h3 {
+	margin-top: @base  !important;
+	margin-bottom: @double  !important;
+	padding-left: @double  !important;
+}
+
+h4,
+h5,
+h6 {
+	margin-top: @base  !important;
+	margin-bottom: @base  !important;
+}
+
+.date {
+	margin-top: @base  !important;
+	margin-bottom: @base  !important;
+	padding-left: @base  !important;
+}
+
+p,
+a {
+	margin-bottom: @base  !important;
+}
+
+.pkp_navigation_primary>li>a {
+	margin: 0 1em !important;
+	padding: @base 0 8px !important;
+}
+
+.pkp_navigation_primary>li:first-child>a {
+	margin-left: 0 !important;
+}
+
+.read_more {
+	padding-right: @triple  !important;
+}
+
+.obj_galley_link {
+	padding: 0 1em !important;
+}
+
+.cover {
+	padding: @base @base @base 0 !important;
+	margin-right: @double  !important;
+}
+
+.issues_archive {
+	margin-left: 0 !important;
+	margin-right: 0 !important;
+
+	li {
+		padding: 0 !important;
+	}
+}
